@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,6 +37,7 @@ import org.springframework.boot.build.DeployedPlugin;
 import org.springframework.boot.build.MavenRepositoryPlugin;
 import org.springframework.boot.build.bom.Library.Group;
 import org.springframework.boot.build.bom.Library.Module;
+import org.springframework.boot.build.bom.bomr.MoveToSnapshots;
 import org.springframework.boot.build.bom.bomr.UpgradeBom;
 
 /**
@@ -59,25 +60,28 @@ public class BomPlugin implements Plugin<Project> {
 		JavaPlatformExtension javaPlatform = project.getExtensions().getByType(JavaPlatformExtension.class);
 		javaPlatform.allowDependencies();
 		createApiEnforcedConfiguration(project);
-		BomExtension bom = project.getExtensions().create("bom", BomExtension.class, project.getDependencies(),
-				project);
+		BomExtension bom = project.getExtensions()
+			.create("bom", BomExtension.class, project.getDependencies(), project);
 		project.getTasks().create("bomrCheck", CheckBom.class, bom);
 		project.getTasks().create("bomrUpgrade", UpgradeBom.class, bom);
+		project.getTasks().create("moveToSnapshots", MoveToSnapshots.class, bom);
 		new PublishingCustomizer(project, bom).customize();
 
 	}
 
 	private void createApiEnforcedConfiguration(Project project) {
-		Configuration apiEnforced = project.getConfigurations().create(API_ENFORCED_CONFIGURATION_NAME,
-				(configuration) -> {
-					configuration.setCanBeConsumed(false);
-					configuration.setCanBeResolved(false);
-					configuration.setVisible(false);
-				});
-		project.getConfigurations().getByName(JavaPlatformPlugin.ENFORCED_API_ELEMENTS_CONFIGURATION_NAME)
-				.extendsFrom(apiEnforced);
-		project.getConfigurations().getByName(JavaPlatformPlugin.ENFORCED_RUNTIME_ELEMENTS_CONFIGURATION_NAME)
-				.extendsFrom(apiEnforced);
+		Configuration apiEnforced = project.getConfigurations()
+			.create(API_ENFORCED_CONFIGURATION_NAME, (configuration) -> {
+				configuration.setCanBeConsumed(false);
+				configuration.setCanBeResolved(false);
+				configuration.setVisible(false);
+			});
+		project.getConfigurations()
+			.getByName(JavaPlatformPlugin.ENFORCED_API_ELEMENTS_CONFIGURATION_NAME)
+			.extendsFrom(apiEnforced);
+		project.getConfigurations()
+			.getByName(JavaPlatformPlugin.ENFORCED_RUNTIME_ELEMENTS_CONFIGURATION_NAME)
+			.extendsFrom(apiEnforced);
 	}
 
 	private static final class PublishingCustomizer {
@@ -153,16 +157,19 @@ public class BomPlugin implements Plugin<Project> {
 				for (Node dependency : findChildren(dependencies, "dependency")) {
 					String groupId = findChild(dependency, "groupId").text();
 					String artifactId = findChild(dependency, "artifactId").text();
-					this.bom.getLibraries().stream().flatMap((library) -> library.getGroups().stream())
-							.filter((group) -> group.getId().equals(groupId))
-							.flatMap((group) -> group.getModules().stream())
-							.filter((module) -> module.getName().equals(artifactId))
-							.flatMap((module) -> module.getExclusions().stream()).forEach((exclusion) -> {
-								Node exclusions = findOrCreateNode(dependency, "exclusions");
-								Node node = new Node(exclusions, "exclusion");
-								node.appendNode("groupId", exclusion.getGroupId());
-								node.appendNode("artifactId", exclusion.getArtifactId());
-							});
+					this.bom.getLibraries()
+						.stream()
+						.flatMap((library) -> library.getGroups().stream())
+						.filter((group) -> group.getId().equals(groupId))
+						.flatMap((group) -> group.getModules().stream())
+						.filter((module) -> module.getName().equals(artifactId))
+						.flatMap((module) -> module.getExclusions().stream())
+						.forEach((exclusion) -> {
+							Node exclusions = findOrCreateNode(dependency, "exclusions");
+							Node node = new Node(exclusions, "exclusion");
+							node.appendNode("groupId", exclusion.getGroupId());
+							node.appendNode("artifactId", exclusion.getArtifactId());
+						});
 				}
 			}
 		}
@@ -173,12 +180,15 @@ public class BomPlugin implements Plugin<Project> {
 				for (Node dependency : findChildren(dependencies, "dependency")) {
 					String groupId = findChild(dependency, "groupId").text();
 					String artifactId = findChild(dependency, "artifactId").text();
-					Set<String> types = this.bom.getLibraries().stream()
-							.flatMap((library) -> library.getGroups().stream())
-							.filter((group) -> group.getId().equals(groupId))
-							.flatMap((group) -> group.getModules().stream())
-							.filter((module) -> module.getName().equals(artifactId)).map(Module::getType)
-							.filter(Objects::nonNull).collect(Collectors.toSet());
+					Set<String> types = this.bom.getLibraries()
+						.stream()
+						.flatMap((library) -> library.getGroups().stream())
+						.filter((group) -> group.getId().equals(groupId))
+						.flatMap((group) -> group.getModules().stream())
+						.filter((module) -> module.getName().equals(artifactId))
+						.map(Module::getType)
+						.filter(Objects::nonNull)
+						.collect(Collectors.toSet());
 					if (types.size() > 1) {
 						throw new IllegalStateException(
 								"Multiple types for " + groupId + ":" + artifactId + ": " + types);
@@ -199,12 +209,15 @@ public class BomPlugin implements Plugin<Project> {
 					String groupId = findChild(dependency, "groupId").text();
 					String artifactId = findChild(dependency, "artifactId").text();
 					String version = findChild(dependency, "version").text();
-					Set<String> classifiers = this.bom.getLibraries().stream()
-							.flatMap((library) -> library.getGroups().stream())
-							.filter((group) -> group.getId().equals(groupId))
-							.flatMap((group) -> group.getModules().stream())
-							.filter((module) -> module.getName().equals(artifactId)).map(Module::getClassifier)
-							.filter(Objects::nonNull).collect(Collectors.toSet());
+					Set<String> classifiers = this.bom.getLibraries()
+						.stream()
+						.flatMap((library) -> library.getGroups().stream())
+						.filter((group) -> group.getId().equals(groupId))
+						.flatMap((group) -> group.getModules().stream())
+						.filter((module) -> module.getName().equals(artifactId))
+						.map(Module::getClassifier)
+						.filter(Objects::nonNull)
+						.collect(Collectors.toSet());
 					Node target = dependency;
 					for (String classifier : classifiers) {
 						if (classifier.length() > 0) {
@@ -255,9 +268,8 @@ public class BomPlugin implements Plugin<Project> {
 
 		private Node findChild(Node parent, String name) {
 			for (Object child : parent.children()) {
-				if (child instanceof Node) {
-					Node node = (Node) child;
-					if ((node.name() instanceof QName) && name.equals(((QName) node.name()).getLocalPart())) {
+				if (child instanceof Node node) {
+					if ((node.name() instanceof QName qname) && name.equals(qname.getLocalPart())) {
 						return node;
 					}
 					if (name.equals(node.name())) {
@@ -270,15 +282,12 @@ public class BomPlugin implements Plugin<Project> {
 
 		@SuppressWarnings("unchecked")
 		private List<Node> findChildren(Node parent, String name) {
-			return (List<Node>) parent.children().stream().filter((child) -> isNodeWithName(child, name))
-					.collect(Collectors.toList());
-
+			return parent.children().stream().filter((child) -> isNodeWithName(child, name)).toList();
 		}
 
 		private boolean isNodeWithName(Object candidate, String name) {
-			if (candidate instanceof Node) {
-				Node node = (Node) candidate;
-				if ((node.name() instanceof QName) && name.equals(((QName) node.name()).getLocalPart())) {
+			if (candidate instanceof Node node) {
+				if ((node.name() instanceof QName qname) && name.equals(qname.getLocalPart())) {
 					return true;
 				}
 				if (name.equals(node.name())) {
