@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.boot.build.bom.bomr;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
@@ -42,14 +41,14 @@ class UpgradeApplicator {
 	}
 
 	Path apply(Upgrade upgrade) throws IOException {
-		String buildFileContents = new String(Files.readAllBytes(this.buildFile), StandardCharsets.UTF_8);
+		String buildFileContents = Files.readString(this.buildFile);
 		Matcher matcher = Pattern.compile("library\\(\"" + upgrade.getLibrary().getName() + "\", \"(.+)\"\\)")
-				.matcher(buildFileContents);
+			.matcher(buildFileContents);
 		if (!matcher.find()) {
 			matcher = Pattern
-					.compile("library\\(\"" + upgrade.getLibrary().getName() + "\"\\) \\{\\s+version\\(\"(.+)\"\\)",
-							Pattern.MULTILINE)
-					.matcher(buildFileContents);
+				.compile("library\\(\"" + upgrade.getLibrary().getName() + "\"\\) \\{\\s+version\\(\"(.+)\"\\)",
+						Pattern.MULTILINE)
+				.matcher(buildFileContents);
 			if (!matcher.find()) {
 				throw new IllegalStateException("Failed to find definition for library '"
 						+ upgrade.getLibrary().getName() + "' in bom '" + this.buildFile + "'");
@@ -68,7 +67,7 @@ class UpgradeApplicator {
 
 	private void updateGradleProperties(Upgrade upgrade, String version) throws IOException {
 		String property = version.substring(2, version.length() - 1);
-		String gradlePropertiesContents = new String(Files.readAllBytes(this.gradleProperties), StandardCharsets.UTF_8);
+		String gradlePropertiesContents = Files.readString(this.gradleProperties);
 		String modified = gradlePropertiesContents.replace(
 				property + "=" + upgrade.getLibrary().getVersion().getVersion(), property + "=" + upgrade.getVersion());
 		overwrite(this.gradleProperties, modified);
@@ -82,8 +81,7 @@ class UpgradeApplicator {
 	}
 
 	private void overwrite(Path target, String content) throws IOException {
-		Files.write(target, content.getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE,
-				StandardOpenOption.TRUNCATE_EXISTING);
+		Files.writeString(target, content, StandardOpenOption.WRITE, StandardOpenOption.TRUNCATE_EXISTING);
 	}
 
 }
