@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,17 @@
 
 package org.springframework.boot.build.bom.bomr.github;
 
+import java.time.Duration;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.client.HttpClientErrorException.Forbidden;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 /**
@@ -51,18 +55,22 @@ final class StandardGitHubRepository implements GitHubRepository {
 		}
 		requestBody.put("body", body);
 		try {
-			Thread.sleep(1000);
+			ResponseEntity<Map> response = this.rest.postForEntity("issues", requestBody, Map.class);
+			// See gh-30304
+			sleep(Duration.ofSeconds(3));
+			return (Integer) response.getBody().get("number");
 		}
-		catch (InterruptedException ex) {
-			Thread.currentThread().interrupt();
+		catch (RestClientException ex) {
+			if (ex instanceof Forbidden forbidden) {
+				System.out.println("Received 403 response with headers " + forbidden.getResponseHeaders());
+			}
+			throw ex;
 		}
-		ResponseEntity<Map> response = this.rest.postForEntity("issues", requestBody, Map.class);
-		return (Integer) response.getBody().get("number");
 	}
 
 	@Override
-	public List<String> getLabels() {
-		return get("labels?per_page=100", (label) -> (String) label.get("name"));
+	public Set<String> getLabels() {
+		return new HashSet<>(get("labels?per_page=100", (label) -> (String) label.get("name")));
 	}
 
 	@Override
@@ -76,14 +84,23 @@ final class StandardGitHubRepository implements GitHubRepository {
 		return get(
 				"issues?per_page=100&state=all&labels=" + String.join(",", labels) + "&milestone="
 						+ milestone.getNumber(),
-				(issue) -> new Issue(this.rest, (Integer) issue.get("number"), (String) issue.get("title")));
+				(issue) -> new Issue(this.rest, (Integer) issue.get("number"), (String) issue.get("title"),
+						Issue.State.of((String) issue.get("state"))));
 	}
 
 	@SuppressWarnings({ "rawtypes", "unchecked" })
 	private <T> List<T> get(String name, Function<Map<String, Object>, T> mapper) {
 		ResponseEntity<List> response = this.rest.getForEntity(name, List.class);
-		List<Map<String, Object>> body = response.getBody();
-		return body.stream().map(mapper).collect(Collectors.toList());
+		return ((List<Map<String, Object>>) response.getBody()).stream().map(mapper).toList();
+	}
+
+	private static void sleep(Duration duration) {
+		try {
+			Thread.sleep(duration.toMillis());
+		}
+		catch (InterruptedException ex) {
+			Thread.currentThread().interrupt();
+		}
 	}
 
 }
