@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -67,8 +67,8 @@ public class CheckClasspathForUnnecessaryExclusions extends DefaultTask {
 			ConfigurationContainer configurations) {
 		this.dependencyHandler = getProject().getDependencies();
 		this.configurations = getProject().getConfigurations();
-		this.platform = this.dependencyHandler.create(
-				this.dependencyHandler.platform(this.dependencyHandler.project(SPRING_BOOT_DEPENDENCIES_PROJECT)));
+		this.platform = this.dependencyHandler
+			.create(this.dependencyHandler.platform(this.dependencyHandler.project(SPRING_BOOT_DEPENDENCIES_PROJECT)));
 		getOutputs().upToDateWhen((task) -> true);
 	}
 
@@ -79,15 +79,17 @@ public class CheckClasspathForUnnecessaryExclusions extends DefaultTask {
 	}
 
 	private void processDependency(Dependency dependency) {
-		if (dependency instanceof ModuleDependency) {
-			processDependency((ModuleDependency) dependency);
+		if (dependency instanceof ModuleDependency moduleDependency) {
+			processDependency(moduleDependency);
 		}
 	}
 
 	private void processDependency(ModuleDependency dependency) {
 		String dependencyId = getId(dependency);
-		TreeSet<String> exclusions = dependency.getExcludeRules().stream().map(this::getId)
-				.collect(Collectors.toCollection(TreeSet::new));
+		TreeSet<String> exclusions = dependency.getExcludeRules()
+			.stream()
+			.map(this::getId)
+			.collect(Collectors.toCollection(TreeSet::new));
 		this.exclusionsByDependencyId.put(dependencyId, exclusions);
 		if (!exclusions.isEmpty()) {
 			this.dependencyById.put(dependencyId, getProject().getDependencies().create(dependencyId));
@@ -106,8 +108,12 @@ public class CheckClasspathForUnnecessaryExclusions extends DefaultTask {
 			if (!exclusions.isEmpty()) {
 				Dependency toCheck = this.dependencyById.get(dependencyId);
 				List<String> dependencies = this.configurations.detachedConfiguration(toCheck, this.platform)
-						.getIncoming().getArtifacts().getArtifacts().stream().map(this::getId)
-						.collect(Collectors.toList());
+					.getIncoming()
+					.getArtifacts()
+					.getArtifacts()
+					.stream()
+					.map(this::getId)
+					.toList();
 				exclusions.removeAll(dependencies);
 				removeProfileExclusions(dependencyId, exclusions);
 				if (!exclusions.isEmpty()) {
