@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,11 +16,12 @@
 
 package org.springframework.boot.build.testing;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
+import org.gradle.api.DefaultTask;
 import org.gradle.api.services.BuildService;
 import org.gradle.api.services.BuildServiceParameters;
 import org.gradle.api.tasks.testing.Test;
@@ -29,22 +30,19 @@ import org.gradle.tooling.events.FinishEvent;
 import org.gradle.tooling.events.OperationCompletionListener;
 
 /**
- * {@link BuildService} that provides an overview of all of the test failures in the
- * build.
+ * {@link BuildService} that provides an overview of all the test failures in the build.
  *
  * @author Andy Wilkinson
  */
 public abstract class TestResultsOverview
 		implements BuildService<BuildServiceParameters.None>, OperationCompletionListener, AutoCloseable {
 
-	private final Map<Test, List<TestFailure>> testFailures = new TreeMap<>(
-			(one, two) -> one.getPath().compareTo(two.getPath()));
+	private final Map<Test, List<TestFailure>> testFailures = new TreeMap<>(Comparator.comparing(DefaultTask::getPath));
 
 	private final Object monitor = new Object();
 
 	void addFailures(Test test, List<TestDescriptor> failureDescriptors) {
-		List<TestFailure> testFailures = failureDescriptors.stream().map(TestFailure::new).sorted()
-				.collect(Collectors.toList());
+		List<TestFailure> testFailures = failureDescriptors.stream().map(TestFailure::new).sorted().toList();
 		synchronized (this.monitor) {
 			this.testFailures.put(test, testFailures);
 		}
@@ -68,7 +66,7 @@ public abstract class TestResultsOverview
 				System.err.println();
 				System.err.println(task.getPath());
 				failures.forEach((failure) -> System.err
-						.println("    " + failure.descriptor.getClassName() + " > " + failure.descriptor.getName()));
+					.println("    " + failure.descriptor.getClassName() + " > " + failure.descriptor.getName()));
 			});
 		}
 	}
