@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,16 +18,15 @@ package org.springframework.boot.actuate.beans;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
-import org.springframework.boot.actuate.beans.BeansEndpoint.ApplicationBeans;
 import org.springframework.boot.actuate.beans.BeansEndpoint.BeanDescriptor;
-import org.springframework.boot.actuate.beans.BeansEndpoint.ContextBeans;
+import org.springframework.boot.actuate.beans.BeansEndpoint.BeansDescriptor;
+import org.springframework.boot.actuate.beans.BeansEndpoint.ContextBeansDescriptor;
 import org.springframework.boot.test.context.runner.ApplicationContextRunner;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.annotation.Bean;
@@ -47,13 +46,13 @@ class BeansEndpointTests {
 	@Test
 	void beansAreFound() {
 		ApplicationContextRunner contextRunner = new ApplicationContextRunner()
-				.withUserConfiguration(EndpointConfiguration.class);
+			.withUserConfiguration(EndpointConfiguration.class);
 		contextRunner.run((context) -> {
-			ApplicationBeans result = context.getBean(BeansEndpoint.class).beans();
-			ContextBeans descriptor = result.getContexts().get(context.getId());
+			BeansDescriptor result = context.getBean(BeansEndpoint.class).beans();
+			ContextBeansDescriptor descriptor = result.getContexts().get(context.getId());
 			assertThat(descriptor.getParentId()).isNull();
 			Map<String, BeanDescriptor> beans = descriptor.getBeans();
-			assertThat(beans.size()).isLessThanOrEqualTo(context.getBeanDefinitionCount());
+			assertThat(beans).hasSizeLessThanOrEqualTo(context.getBeanDefinitionCount());
 			assertThat(beans).containsKey("endpoint");
 		});
 	}
@@ -61,15 +60,15 @@ class BeansEndpointTests {
 	@Test
 	void infrastructureBeansAreOmitted() {
 		ApplicationContextRunner contextRunner = new ApplicationContextRunner()
-				.withUserConfiguration(EndpointConfiguration.class);
+			.withUserConfiguration(EndpointConfiguration.class);
 		contextRunner.run((context) -> {
 			ConfigurableListableBeanFactory factory = (ConfigurableListableBeanFactory) context
-					.getAutowireCapableBeanFactory();
+				.getAutowireCapableBeanFactory();
 			List<String> infrastructureBeans = Stream.of(context.getBeanDefinitionNames())
-					.filter((name) -> BeanDefinition.ROLE_INFRASTRUCTURE == factory.getBeanDefinition(name).getRole())
-					.collect(Collectors.toList());
-			ApplicationBeans result = context.getBean(BeansEndpoint.class).beans();
-			ContextBeans contextDescriptor = result.getContexts().get(context.getId());
+				.filter((name) -> BeanDefinition.ROLE_INFRASTRUCTURE == factory.getBeanDefinition(name).getRole())
+				.toList();
+			BeansDescriptor result = context.getBean(BeansEndpoint.class).beans();
+			ContextBeansDescriptor contextDescriptor = result.getContexts().get(context.getId());
 			Map<String, BeanDescriptor> beans = contextDescriptor.getBeans();
 			for (String infrastructureBean : infrastructureBeans) {
 				assertThat(beans).doesNotContainKey(infrastructureBean);
@@ -80,10 +79,10 @@ class BeansEndpointTests {
 	@Test
 	void lazyBeansAreOmitted() {
 		ApplicationContextRunner contextRunner = new ApplicationContextRunner()
-				.withUserConfiguration(EndpointConfiguration.class, LazyBeanConfiguration.class);
+			.withUserConfiguration(EndpointConfiguration.class, LazyBeanConfiguration.class);
 		contextRunner.run((context) -> {
-			ApplicationBeans result = context.getBean(BeansEndpoint.class).beans();
-			ContextBeans contextDescriptor = result.getContexts().get(context.getId());
+			BeansDescriptor result = context.getBean(BeansEndpoint.class).beans();
+			ContextBeansDescriptor contextDescriptor = result.getContexts().get(context.getId());
 			assertThat(context).hasBean("lazyBean");
 			assertThat(contextDescriptor.getBeans()).doesNotContainKey("lazyBean");
 		});
@@ -92,14 +91,15 @@ class BeansEndpointTests {
 	@Test
 	void beansInParentContextAreFound() {
 		ApplicationContextRunner parentRunner = new ApplicationContextRunner()
-				.withUserConfiguration(BeanConfiguration.class);
+			.withUserConfiguration(BeanConfiguration.class);
 		parentRunner.run((parent) -> {
-			new ApplicationContextRunner().withUserConfiguration(EndpointConfiguration.class).withParent(parent)
-					.run((child) -> {
-						ApplicationBeans result = child.getBean(BeansEndpoint.class).beans();
-						assertThat(result.getContexts().get(parent.getId()).getBeans()).containsKey("bean");
-						assertThat(result.getContexts().get(child.getId()).getBeans()).containsKey("endpoint");
-					});
+			new ApplicationContextRunner().withUserConfiguration(EndpointConfiguration.class)
+				.withParent(parent)
+				.run((child) -> {
+					BeansDescriptor result = child.getBean(BeansEndpoint.class).beans();
+					assertThat(result.getContexts().get(parent.getId()).getBeans()).containsKey("bean");
+					assertThat(result.getContexts().get(child.getId()).getBeans()).containsKey("endpoint");
+				});
 		});
 	}
 
