@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,8 +22,6 @@ import java.time.Duration;
 import java.util.List;
 import java.util.Locale;
 import java.util.concurrent.TimeUnit;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import org.neo4j.driver.AuthToken;
 import org.neo4j.driver.AuthTokens;
@@ -38,12 +36,14 @@ import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
+import org.springframework.boot.autoconfigure.neo4j.Neo4jProperties.Authentication;
 import org.springframework.boot.autoconfigure.neo4j.Neo4jProperties.Pool;
 import org.springframework.boot.autoconfigure.neo4j.Neo4jProperties.Security;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.context.properties.source.InvalidConfigurationPropertyValueException;
 import org.springframework.context.annotation.Bean;
 import org.springframework.core.env.Environment;
+import org.springframework.util.Assert;
 import org.springframework.util.StringUtils;
 
 /**
@@ -51,6 +51,9 @@ import org.springframework.util.StringUtils;
  *
  * @author Michael J. Simons
  * @author Stephane Nicoll
+ * @author Moritz Halbritter
+ * @author Andy Wilkinson
+ * @author Phillip Webb
  * @since 2.4.0
  */
 @AutoConfiguration
@@ -58,62 +61,28 @@ import org.springframework.util.StringUtils;
 @EnableConfigurationProperties(Neo4jProperties.class)
 public class Neo4jAutoConfiguration {
 
-	private static final URI DEFAULT_SERVER_URI = URI.create("bolt://localhost:7687");
+	@Bean
+	@ConditionalOnMissingBean(Neo4jConnectionDetails.class)
+	PropertiesNeo4jConnectionDetails neo4jConnectionDetails(Neo4jProperties properties) {
+		return new PropertiesNeo4jConnectionDetails(properties);
+	}
 
 	@Bean
 	@ConditionalOnMissingBean
 	public Driver neo4jDriver(Neo4jProperties properties, Environment environment,
+			Neo4jConnectionDetails connectionDetails,
 			ObjectProvider<ConfigBuilderCustomizer> configBuilderCustomizers) {
-		AuthToken authToken = mapAuthToken(properties.getAuthentication(), environment);
-		Config config = mapDriverConfig(properties,
-				configBuilderCustomizers.orderedStream().collect(Collectors.toList()));
-		URI serverUri = determineServerUri(properties, environment);
-		return GraphDatabase.driver(serverUri, authToken, config);
+		AuthToken authToken = connectionDetails.getAuthToken();
+		Config config = mapDriverConfig(properties, connectionDetails,
+				configBuilderCustomizers.orderedStream().toList());
+		return GraphDatabase.driver(connectionDetails.getUri(), authToken, config);
 	}
 
-	URI determineServerUri(Neo4jProperties properties, Environment environment) {
-		return getOrFallback(properties.getUri(), () -> {
-			URI deprecatedProperty = environment.getProperty("spring.data.neo4j.uri", URI.class);
-			return (deprecatedProperty != null) ? deprecatedProperty : DEFAULT_SERVER_URI;
-		});
-	}
-
-	AuthToken mapAuthToken(Neo4jProperties.Authentication authentication, Environment environment) {
-		String username = getOrFallback(authentication.getUsername(),
-				() -> environment.getProperty("spring.data.neo4j.username", String.class));
-		String password = getOrFallback(authentication.getPassword(),
-				() -> environment.getProperty("spring.data.neo4j.password", String.class));
-		String kerberosTicket = authentication.getKerberosTicket();
-		String realm = authentication.getRealm();
-
-		boolean hasUsername = StringUtils.hasText(username);
-		boolean hasPassword = StringUtils.hasText(password);
-		boolean hasKerberosTicket = StringUtils.hasText(kerberosTicket);
-
-		if (hasUsername && hasKerberosTicket) {
-			throw new IllegalStateException(String.format(
-					"Cannot specify both username ('%s') and kerberos ticket ('%s')", username, kerberosTicket));
-		}
-		if (hasUsername && hasPassword) {
-			return AuthTokens.basic(username, password, realm);
-		}
-		if (hasKerberosTicket) {
-			return AuthTokens.kerberos(kerberosTicket);
-		}
-		return AuthTokens.none();
-	}
-
-	private <T> T getOrFallback(T value, Supplier<T> fallback) {
-		if (value != null) {
-			return value;
-		}
-		return fallback.get();
-	}
-
-	Config mapDriverConfig(Neo4jProperties properties, List<ConfigBuilderCustomizer> customizers) {
+	Config mapDriverConfig(Neo4jProperties properties, Neo4jConnectionDetails connectionDetails,
+			List<ConfigBuilderCustomizer> customizers) {
 		Config.ConfigBuilder builder = Config.builder();
 		configurePoolSettings(builder, properties.getPool());
-		URI uri = properties.getUri();
+		URI uri = connectionDetails.getUri();
 		String scheme = (uri != null) ? uri.getScheme() : "bolt";
 		configureDriverSettings(builder, properties, isSimpleScheme(scheme));
 		builder.withLogging(new Neo4jSpringJclLogging());
@@ -188,20 +157,60 @@ public class Neo4jAutoConfiguration {
 	private TrustStrategy createTrustStrategy(Neo4jProperties.Security securityProperties, String propertyName,
 			Security.TrustStrategy strategy) {
 		switch (strategy) {
-		case TRUST_ALL_CERTIFICATES:
-			return TrustStrategy.trustAllCertificates();
-		case TRUST_SYSTEM_CA_SIGNED_CERTIFICATES:
-			return TrustStrategy.trustSystemCertificates();
-		case TRUST_CUSTOM_CA_SIGNED_CERTIFICATES:
-			File certFile = securityProperties.getCertFile();
-			if (certFile == null || !certFile.isFile()) {
+			case TRUST_ALL_CERTIFICATES:
+				return TrustStrategy.trustAllCertificates();
+			case TRUST_SYSTEM_CA_SIGNED_CERTIFICATES:
+				return TrustStrategy.trustSystemCertificates();
+			case TRUST_CUSTOM_CA_SIGNED_CERTIFICATES:
+				File certFile = securityProperties.getCertFile();
+				if (certFile == null || !certFile.isFile()) {
+					throw new InvalidConfigurationPropertyValueException(propertyName, strategy.name(),
+							"Configured trust strategy requires a certificate file.");
+				}
+				return TrustStrategy.trustCustomCertificateSignedBy(certFile);
+			default:
 				throw new InvalidConfigurationPropertyValueException(propertyName, strategy.name(),
-						"Configured trust strategy requires a certificate file.");
-			}
-			return TrustStrategy.trustCustomCertificateSignedBy(certFile);
-		default:
-			throw new InvalidConfigurationPropertyValueException(propertyName, strategy.name(), "Unknown strategy.");
+						"Unknown strategy.");
 		}
+	}
+
+	/**
+	 * Adapts {@link Neo4jProperties} to {@link Neo4jConnectionDetails}.
+	 */
+	static class PropertiesNeo4jConnectionDetails implements Neo4jConnectionDetails {
+
+		private final Neo4jProperties properties;
+
+		PropertiesNeo4jConnectionDetails(Neo4jProperties properties) {
+			this.properties = properties;
+		}
+
+		@Override
+		public URI getUri() {
+			URI uri = this.properties.getUri();
+			return (uri != null) ? uri : Neo4jConnectionDetails.super.getUri();
+		}
+
+		@Override
+		public AuthToken getAuthToken() {
+			Authentication authentication = this.properties.getAuthentication();
+			String username = authentication.getUsername();
+			String kerberosTicket = authentication.getKerberosTicket();
+			boolean hasUsername = StringUtils.hasText(username);
+			boolean hasKerberosTicket = StringUtils.hasText(kerberosTicket);
+			Assert.state(!(hasUsername && hasKerberosTicket),
+					() -> "Cannot specify both username ('%s') and kerberos ticket ('%s')".formatted(username,
+							kerberosTicket));
+			String password = authentication.getPassword();
+			if (hasUsername && StringUtils.hasText(password)) {
+				return AuthTokens.basic(username, password, authentication.getRealm());
+			}
+			if (hasKerberosTicket) {
+				return AuthTokens.kerberos(kerberosTicket);
+			}
+			return AuthTokens.none();
+		}
+
 	}
 
 }
