@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.boot.autoconfigure.r2dbc;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.r2dbc.pool.ConnectionPool;
 import io.r2dbc.pool.ConnectionPoolConfiguration;
@@ -52,20 +51,25 @@ import org.springframework.util.StringUtils;
  * @author Mark Paluch
  * @author Stephane Nicoll
  * @author Rodolpho S. Couto
+ * @author Moritz Halbritter
+ * @author Andy Wilkinson
+ * @author Phillip Webb
  */
 abstract class ConnectionFactoryConfigurations {
 
-	protected static ConnectionFactory createConnectionFactory(R2dbcProperties properties, ClassLoader classLoader,
+	protected static ConnectionFactory createConnectionFactory(R2dbcProperties properties,
+			R2dbcConnectionDetails connectionDetails, ClassLoader classLoader,
 			List<ConnectionFactoryOptionsBuilderCustomizer> optionsCustomizers) {
 		try {
 			return org.springframework.boot.r2dbc.ConnectionFactoryBuilder
-					.withOptions(new ConnectionFactoryOptionsInitializer().initialize(properties,
-							() -> EmbeddedDatabaseConnection.get(classLoader)))
-					.configure((options) -> {
-						for (ConnectionFactoryOptionsBuilderCustomizer optionsCustomizer : optionsCustomizers) {
-							optionsCustomizer.customize(options);
-						}
-					}).build();
+				.withOptions(new ConnectionFactoryOptionsInitializer().initialize(properties, connectionDetails,
+						() -> EmbeddedDatabaseConnection.get(classLoader)))
+				.configure((options) -> {
+					for (ConnectionFactoryOptionsBuilderCustomizer optionsCustomizer : optionsCustomizers) {
+						optionsCustomizer.customize(options);
+					}
+				})
+				.build();
 		}
 		catch (IllegalStateException ex) {
 			String message = ex.getMessage();
@@ -87,10 +91,12 @@ abstract class ConnectionFactoryConfigurations {
 		static class PooledConnectionFactoryConfiguration {
 
 			@Bean(destroyMethod = "dispose")
-			ConnectionPool connectionFactory(R2dbcProperties properties, ResourceLoader resourceLoader,
+			ConnectionPool connectionFactory(R2dbcProperties properties,
+					ObjectProvider<R2dbcConnectionDetails> connectionDetails, ResourceLoader resourceLoader,
 					ObjectProvider<ConnectionFactoryOptionsBuilderCustomizer> customizers) {
 				ConnectionFactory connectionFactory = createConnectionFactory(properties,
-						resourceLoader.getClassLoader(), customizers.orderedStream().collect(Collectors.toList()));
+						connectionDetails.getIfAvailable(), resourceLoader.getClassLoader(),
+						customizers.orderedStream().toList());
 				R2dbcProperties.Pool pool = properties.getPool();
 				PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
 				ConnectionPoolConfiguration.Builder builder = ConnectionPoolConfiguration.builder(connectionFactory);
@@ -116,17 +122,18 @@ abstract class ConnectionFactoryConfigurations {
 	static class GenericConfiguration {
 
 		@Bean
-		ConnectionFactory connectionFactory(R2dbcProperties properties, ResourceLoader resourceLoader,
+		ConnectionFactory connectionFactory(R2dbcProperties properties,
+				ObjectProvider<R2dbcConnectionDetails> connectionDetails, ResourceLoader resourceLoader,
 				ObjectProvider<ConnectionFactoryOptionsBuilderCustomizer> customizers) {
-			return createConnectionFactory(properties, resourceLoader.getClassLoader(),
-					customizers.orderedStream().collect(Collectors.toList()));
+			return createConnectionFactory(properties, connectionDetails.getIfAvailable(),
+					resourceLoader.getClassLoader(), customizers.orderedStream().toList());
 		}
 
 	}
 
 	/**
 	 * {@link Condition} that checks that a {@link ConnectionPool} is requested. The
-	 * condition matches if pooling was opt-in via configuration. If any of the
+	 * condition matches if pooling was opt-in through configuration. If any of the
 	 * spring.r2dbc.pool.* properties have been configured, an exception is thrown if the
 	 * URL also contains pooling-related options or io.r2dbc.pool.ConnectionPool is not on
 	 * the class path.
@@ -135,8 +142,8 @@ abstract class ConnectionFactoryConfigurations {
 
 		@Override
 		public ConditionOutcome getMatchOutcome(ConditionContext context, AnnotatedTypeMetadata metadata) {
-			BindResult<Pool> pool = Binder.get(context.getEnvironment()).bind("spring.r2dbc.pool",
-					Bindable.of(Pool.class));
+			BindResult<Pool> pool = Binder.get(context.getEnvironment())
+				.bind("spring.r2dbc.pool", Bindable.of(Pool.class));
 			if (hasPoolUrl(context.getEnvironment())) {
 				if (pool.isBound()) {
 					throw new MultipleConnectionPoolConfigurationsException();
