@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.assertj.core.api.Condition;
 import org.hamcrest.collection.IsMapContaining;
@@ -209,11 +208,12 @@ public final class Metadata {
 		}
 
 		private ItemMetadata findItem(ConfigurationMetadata metadata, String name) {
-			List<ItemMetadata> candidates = metadata.getItems().stream()
-					.filter((item) -> item.isOfItemType(this.itemType) && name.equals(item.getName()))
-					.collect(Collectors.toList());
+			List<ItemMetadata> candidates = metadata.getItems()
+				.stream()
+				.filter((item) -> item.isOfItemType(this.itemType) && name.equals(item.getName()))
+				.toList();
 			if (candidates.size() > 1) {
-				throw new IllegalStateException("More that one metadata item with name '" + name + "': " + candidates);
+				throw new IllegalStateException("More than one metadata item with name '" + name + "': " + candidates);
 			}
 			return (candidates.size() == 1) ? candidates.get(0) : null;
 		}
@@ -391,7 +391,7 @@ public final class Metadata {
 			if (this.parameters != null) {
 				for (Map.Entry<String, Object> entry : this.parameters.entrySet()) {
 					if (!IsMapContaining.hasEntry(entry.getKey(), entry.getValue())
-							.matches(valueProvider.getParameters())) {
+						.matches(valueProvider.getParameters())) {
 						return false;
 					}
 				}
