@@ -17,7 +17,6 @@
 package org.springframework.boot.gradle.tasks.run;
 
 import java.io.File;
-import java.lang.reflect.Method;
 import java.util.Set;
 
 import org.gradle.api.file.SourceDirectorySet;
@@ -26,7 +25,6 @@ import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetOutput;
-import org.gradle.jvm.toolchain.JavaLauncher;
 import org.gradle.work.DisableCachingByDefault;
 
 /**
@@ -36,30 +34,20 @@ import org.gradle.work.DisableCachingByDefault;
  * @since 2.0.0
  */
 @DisableCachingByDefault(because = "Application should always run")
-public class BootRun extends JavaExec {
+public abstract class BootRun extends JavaExec {
 
-	private boolean optimizedLaunch = true;
+	public BootRun() {
+		getOptimizedLaunch().convention(true);
+	}
 
 	/**
-	 * Returns {@code true} if the JVM's launch should be optimized, otherwise
-	 * {@code false}. Defaults to {@code true}.
+	 * Returns the property for whether the JVM's launch should be optimized. The property
+	 * defaults to {@code true}.
 	 * @return whether the JVM's launch should be optimized
-	 * @since 2.2.0
+	 * @since 3.0.0
 	 */
 	@Input
-	public boolean isOptimizedLaunch() {
-		return this.optimizedLaunch;
-	}
-
-	/**
-	 * Sets whether the JVM's launch should be optimized. Defaults to {@code true}.
-	 * @param optimizedLaunch {@code true} if the JVM's launch should be optimised,
-	 * otherwise {@code false}
-	 * @since 2.2.0
-	 */
-	public void setOptimizedLaunch(boolean optimizedLaunch) {
-		this.optimizedLaunch = optimizedLaunch;
-	}
+	public abstract Property<Boolean> getOptimizedLaunch();
 
 	/**
 	 * Adds the {@link SourceDirectorySet#getSrcDirs() source directories} of the given
@@ -76,11 +64,8 @@ public class BootRun extends JavaExec {
 
 	@Override
 	public void exec() {
-		if (this.optimizedLaunch) {
+		if (getOptimizedLaunch().get()) {
 			setJvmArgs(getJvmArgs());
-			if (!isJava13OrLater()) {
-				jvmArgs("-Xverify:none");
-			}
 			jvmArgs("-XX:TieredStopAtLevel=1");
 		}
 		if (System.console() != null) {
@@ -88,19 +73,6 @@ public class BootRun extends JavaExec {
 			getEnvironment().put("spring.output.ansi.console-available", true);
 		}
 		super.exec();
-	}
-
-	private boolean isJava13OrLater() {
-		Property<JavaLauncher> javaLauncher = this.getJavaLauncher();
-		if (javaLauncher.isPresent()) {
-			return javaLauncher.get().getMetadata().getLanguageVersion().asInt() >= 13;
-		}
-		for (Method method : String.class.getMethods()) {
-			if (method.getName().equals("stripIndent")) {
-				return true;
-			}
-		}
-		return false;
 	}
 
 }
