@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import java.io.InputStream;
 import java.net.URL;
 import java.util.List;
 import java.util.jar.JarEntry;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -174,7 +173,7 @@ class JarURLConnectionTests {
 		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/w.jar!/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			assertThatExceptionOfType(FileNotFoundException.class)
-					.isThrownBy(JarURLConnection.get(url, nested)::getInputStream);
+				.isThrownBy(JarURLConnection.get(url, nested)::getInputStream);
 		}
 	}
 
@@ -183,7 +182,7 @@ class JarURLConnectionTests {
 		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/nested.jar!/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			JarURLConnection connection = JarURLConnection.get(url, nested);
-			assertThat(connection.getContentLength()).isEqualTo(1);
+			assertThat(connection.getContentLength()).isOne();
 		}
 	}
 
@@ -192,7 +191,7 @@ class JarURLConnectionTests {
 		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/nested.jar!/3.dat");
 		try (JarFile nested = this.jarFile.getNestedJarFile(this.jarFile.getEntry("nested.jar"))) {
 			JarURLConnection connection = JarURLConnection.get(url, nested);
-			assertThat(connection.getContentLengthLong()).isEqualTo(1);
+			assertThat(connection.getContentLengthLong()).isOne();
 		}
 	}
 
@@ -207,29 +206,28 @@ class JarURLConnectionTests {
 	void entriesCanBeStreamedFromJarFileOfConnection() throws Exception {
 		URL url = new URL("jar:" + this.rootJarFile.toURI().toURL() + "!/");
 		JarURLConnection connection = JarURLConnection.get(url, this.jarFile);
-		List<String> entryNames = connection.getJarFile().stream().map(JarEntry::getName).collect(Collectors.toList());
+		List<String> entryNames = connection.getJarFile().stream().map(JarEntry::getName).toList();
 		assertThat(entryNames).hasSize(12);
 	}
 
 	@Test
 	void jarEntryBasicName() {
-		assertThat(new JarEntryName(new StringSequence("a/b/C.class")).toString()).isEqualTo("a/b/C.class");
+		assertThat(new JarEntryName(new StringSequence("a/b/C.class"))).hasToString("a/b/C.class");
 	}
 
 	@Test
 	void jarEntryNameWithSingleByteEncodedCharacters() {
-		assertThat(new JarEntryName(new StringSequence("%61/%62/%43.class")).toString()).isEqualTo("a/b/C.class");
+		assertThat(new JarEntryName(new StringSequence("%61/%62/%43.class"))).hasToString("a/b/C.class");
 	}
 
 	@Test
 	void jarEntryNameWithDoubleByteEncodedCharacters() {
-		assertThat(new JarEntryName(new StringSequence("%c3%a1/b/C.class")).toString()).isEqualTo("\u00e1/b/C.class");
+		assertThat(new JarEntryName(new StringSequence("%c3%a1/b/C.class"))).hasToString("\u00e1/b/C.class");
 	}
 
 	@Test
 	void jarEntryNameWithMixtureOfEncodedAndUnencodedDoubleByteCharacters() {
-		assertThat(new JarEntryName(new StringSequence("%c3%a1/b/\u00c7.class")).toString())
-				.isEqualTo("\u00e1/b/\u00c7.class");
+		assertThat(new JarEntryName(new StringSequence("%c3%a1/b/\u00c7.class"))).hasToString("\u00e1/b/\u00c7.class");
 	}
 
 	@Test
