@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 
@@ -130,7 +129,7 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 		}
 		StringBuilder message = new StringBuilder();
 		message.append("Imported " + results.size() + " resource" + ((results.size() != 1) ? "s " : " "));
-		message.append(results.stream().map(ConfigDataResolutionResult::getResource).collect(Collectors.toList()));
+		message.append(results.stream().map(ConfigDataResolutionResult::getResource).toList());
 		return message;
 	}
 
@@ -221,8 +220,11 @@ class ConfigDataEnvironmentContributors implements Iterable<ConfigDataEnvironmen
 	}
 
 	private Iterator<ConfigurationPropertySource> getBinderSources(Predicate<ConfigDataEnvironmentContributor> filter) {
-		return this.root.stream().filter(this::hasConfigurationPropertySource).filter(filter)
-				.map(ConfigDataEnvironmentContributor::getConfigurationPropertySource).iterator();
+		return this.root.stream()
+			.filter(this::hasConfigurationPropertySource)
+			.filter(filter)
+			.map(ConfigDataEnvironmentContributor::getConfigurationPropertySource)
+			.iterator();
 	}
 
 	private boolean hasConfigurationPropertySource(ConfigDataEnvironmentContributor contributor) {
