@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,16 @@
 
 package org.springframework.boot.context.config;
 
+import java.io.File;
+import java.io.IOException;
+import java.net.URL;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Enumeration;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
@@ -43,10 +46,12 @@ import org.springframework.core.env.MapPropertySource;
 import org.springframework.core.env.PropertySource;
 import org.springframework.core.io.DefaultResourceLoader;
 import org.springframework.core.io.ResourceLoader;
+import org.springframework.core.io.support.SpringFactoriesLoader;
 import org.springframework.mock.env.MockPropertySource;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.mock;
 
 /**
@@ -57,15 +62,15 @@ import static org.mockito.Mockito.mock;
  */
 class ConfigDataEnvironmentTests {
 
-	private DeferredLogFactory logFactory = Supplier::get;
+	private final DeferredLogFactory logFactory = Supplier::get;
 
-	private DefaultBootstrapContext bootstrapContext = new DefaultBootstrapContext();
+	private final DefaultBootstrapContext bootstrapContext = new DefaultBootstrapContext();
 
-	private MockApplicationEnvironment environment = new MockApplicationEnvironment();
+	private final MockApplicationEnvironment environment = new MockApplicationEnvironment();
 
-	private ResourceLoader resourceLoader = new DefaultResourceLoader();
+	private final ResourceLoader resourceLoader = new DefaultResourceLoader();
 
-	private Collection<String> additionalProfiles = Collections.emptyList();
+	private final Collection<String> additionalProfiles = Collections.emptyList();
 
 	@Test
 	void createExposesEnvironmentBinderToConfigDataLocationResolvers() {
@@ -73,7 +78,7 @@ class ConfigDataEnvironmentTests {
 		TestConfigDataEnvironment configDataEnvironment = new TestConfigDataEnvironment(this.logFactory,
 				this.bootstrapContext, this.environment, this.resourceLoader, this.additionalProfiles, null);
 		assertThat(configDataEnvironment.getConfigDataLocationResolversBinder().bind("spring", String.class).get())
-				.isEqualTo("boot");
+			.isEqualTo("boot");
 	}
 
 	@Test
@@ -86,10 +91,13 @@ class ConfigDataEnvironmentTests {
 		this.environment.getPropertySources().addLast(propertySource3);
 		ConfigDataEnvironment configDataEnvironment = new ConfigDataEnvironment(this.logFactory, this.bootstrapContext,
 				this.environment, this.resourceLoader, this.additionalProfiles, null);
-		List<ConfigDataEnvironmentContributor> children = configDataEnvironment.getContributors().getRoot()
-				.getChildren(ImportPhase.BEFORE_PROFILE_ACTIVATION);
-		Object[] wrapped = children.stream().filter((child) -> child.getKind() == Kind.EXISTING)
-				.map(ConfigDataEnvironmentContributor::getPropertySource).toArray();
+		List<ConfigDataEnvironmentContributor> children = configDataEnvironment.getContributors()
+			.getRoot()
+			.getChildren(ImportPhase.BEFORE_PROFILE_ACTIVATION);
+		Object[] wrapped = children.stream()
+			.filter((child) -> child.getKind() == Kind.EXISTING)
+			.map(ConfigDataEnvironmentContributor::getPropertySource)
+			.toArray();
 		assertThat(wrapped[1]).isEqualTo(propertySource1);
 		assertThat(wrapped[2]).isEqualTo(propertySource2);
 		assertThat(wrapped[3]).isEqualTo(propertySource3);
@@ -105,10 +113,13 @@ class ConfigDataEnvironmentTests {
 		this.environment.getPropertySources().addLast(propertySource2);
 		ConfigDataEnvironment configDataEnvironment = new ConfigDataEnvironment(this.logFactory, this.bootstrapContext,
 				this.environment, this.resourceLoader, this.additionalProfiles, null);
-		List<ConfigDataEnvironmentContributor> children = configDataEnvironment.getContributors().getRoot()
-				.getChildren(ImportPhase.BEFORE_PROFILE_ACTIVATION);
-		Object[] wrapped = children.stream().filter((child) -> child.getKind() == Kind.EXISTING)
-				.map(ConfigDataEnvironmentContributor::getPropertySource).toArray();
+		List<ConfigDataEnvironmentContributor> children = configDataEnvironment.getContributors()
+			.getRoot()
+			.getChildren(ImportPhase.BEFORE_PROFILE_ACTIVATION);
+		Object[] wrapped = children.stream()
+			.filter((child) -> child.getKind() == Kind.EXISTING)
+			.map(ConfigDataEnvironmentContributor::getPropertySource)
+			.toArray();
 		assertThat(wrapped[1]).isEqualTo(propertySource1);
 		assertThat(wrapped[2]).isEqualTo(propertySource2);
 		assertThat(wrapped[3]).isEqualTo(defaultPropertySource);
@@ -121,10 +132,14 @@ class ConfigDataEnvironmentTests {
 		this.environment.setProperty("spring.config.import", "i1,i2");
 		ConfigDataEnvironment configDataEnvironment = new ConfigDataEnvironment(this.logFactory, this.bootstrapContext,
 				this.environment, this.resourceLoader, this.additionalProfiles, null);
-		List<ConfigDataEnvironmentContributor> children = configDataEnvironment.getContributors().getRoot()
-				.getChildren(ImportPhase.BEFORE_PROFILE_ACTIVATION);
-		Object[] imports = children.stream().filter((child) -> child.getKind() == Kind.INITIAL_IMPORT)
-				.map(ConfigDataEnvironmentContributor::getImports).map(Object::toString).toArray();
+		List<ConfigDataEnvironmentContributor> children = configDataEnvironment.getContributors()
+			.getRoot()
+			.getChildren(ImportPhase.BEFORE_PROFILE_ACTIVATION);
+		Object[] imports = children.stream()
+			.filter((child) -> child.getKind() == Kind.INITIAL_IMPORT)
+			.map(ConfigDataEnvironmentContributor::getImports)
+			.map(Object::toString)
+			.toArray();
 		assertThat(imports).containsExactly("[i2]", "[i1]", "[a2]", "[a1]", "[l2]", "[l1]");
 	}
 
@@ -155,7 +170,7 @@ class ConfigDataEnvironmentTests {
 		ConfigDataEnvironment configDataEnvironment = new ConfigDataEnvironment(this.logFactory, this.bootstrapContext,
 				this.environment, this.resourceLoader, this.additionalProfiles, null);
 		configDataEnvironment.processAndApply();
-		List<PropertySource<?>> sources = this.environment.getPropertySources().stream().collect(Collectors.toList());
+		List<PropertySource<?>> sources = this.environment.getPropertySources().stream().toList();
 		assertThat(sources.get(sources.size() - 1)).isSameAs(defaultPropertySource);
 	}
 
@@ -231,7 +246,7 @@ class ConfigDataEnvironmentTests {
 
 		};
 		assertThatExceptionOfType(InactiveConfigDataAccessException.class)
-				.isThrownBy(configDataEnvironment::processAndApply);
+			.isThrownBy(configDataEnvironment::processAndApply);
 	}
 
 	@ParameterizedTest
@@ -289,7 +304,7 @@ class ConfigDataEnvironmentTests {
 		ConfigDataEnvironment configDataEnvironment = new ConfigDataEnvironment(this.logFactory, this.bootstrapContext,
 				this.environment, this.resourceLoader, this.additionalProfiles, null);
 		assertThatExceptionOfType(InvalidConfigDataPropertyException.class)
-				.isThrownBy(() -> configDataEnvironment.processAndApply());
+			.isThrownBy(() -> configDataEnvironment.processAndApply());
 	}
 
 	@Test
@@ -302,9 +317,9 @@ class ConfigDataEnvironmentTests {
 		assertThat(listener.getAddedPropertySources()).hasSize(1);
 		AddedPropertySource addedPropertySource = listener.getAddedPropertySources().get(0);
 		assertThat(addedPropertySource.getPropertySource().getProperty("spring")).isEqualTo("boot");
-		assertThat(addedPropertySource.getLocation().toString()).isEqualTo(getConfigLocation(info));
+		assertThat(addedPropertySource.getLocation()).hasToString(getConfigLocation(info));
 		assertThat(addedPropertySource.getResource().toString()).contains("class path resource")
-				.contains(info.getTestMethod().get().getName());
+			.contains(info.getTestMethod().get().getName());
 	}
 
 	@Test
@@ -315,6 +330,33 @@ class ConfigDataEnvironmentTests {
 				this.environment, this.resourceLoader, this.additionalProfiles, listener);
 		configDataEnvironment.processAndApply();
 		assertThat(listener.getProfiles().getActive()).containsExactly("one", "two", "three");
+	}
+
+	@Test
+	@SuppressWarnings("rawtypes")
+	void configDataLoadersAreLoadedUsingClassLoaderFromResourceLoader() {
+		ResourceLoader resourceLoader = mock(ResourceLoader.class);
+		ClassLoader classLoader = new ClassLoader() {
+
+			@Override
+			public Enumeration<URL> getResources(String name) throws IOException {
+				if (SpringFactoriesLoader.FACTORIES_RESOURCE_LOCATION.equals(name)) {
+					return Collections.enumeration(List.of(new File(
+							"src/test/resources/org/springframework/boot/context/config/separate-class-loader-spring.factories")
+						.toURI()
+						.toURL()));
+				}
+				return super.getResources(name);
+			}
+
+		};
+		given(resourceLoader.getClassLoader()).willReturn(classLoader);
+		TestConfigDataEnvironment configDataEnvironment = new TestConfigDataEnvironment(this.logFactory,
+				this.bootstrapContext, this.environment, resourceLoader, this.additionalProfiles, null);
+		assertThat(configDataEnvironment).extracting("loaders.loaders")
+			.asList()
+			.extracting((item) -> (Class) item.getClass())
+			.containsOnly(SeparateClassLoaderConfigDataLoader.class);
 	}
 
 	private String getConfigLocation(TestInfo info) {
@@ -342,6 +384,16 @@ class ConfigDataEnvironmentTests {
 
 		Binder getConfigDataLocationResolversBinder() {
 			return this.configDataLocationResolversBinder;
+		}
+
+	}
+
+	static class SeparateClassLoaderConfigDataLoader implements ConfigDataLoader<ConfigDataResource> {
+
+		@Override
+		public ConfigData load(ConfigDataLoaderContext context, ConfigDataResource resource)
+				throws IOException, ConfigDataResourceNotFoundException {
+			return null;
 		}
 
 	}
