@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.StringReader;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -43,10 +42,14 @@ import static org.junit.jupiter.api.Assertions.fail;
  * Tests for {@link BeanCurrentlyInCreationFailureAnalyzer}.
  *
  * @author Andy Wilkinson
+ * @author Scott Frederick
  */
 class BeanCurrentlyInCreationFailureAnalyzerTests {
 
-	private final BeanCurrentlyInCreationFailureAnalyzer analyzer = new BeanCurrentlyInCreationFailureAnalyzer();
+	private final AnnotationConfigApplicationContext context = new AnnotationConfigApplicationContext();
+
+	private final BeanCurrentlyInCreationFailureAnalyzer analyzer = new BeanCurrentlyInCreationFailureAnalyzer(
+			this.context.getBeanFactory());
 
 	@Test
 	void cyclicBeanMethods() throws IOException {
@@ -54,8 +57,8 @@ class BeanCurrentlyInCreationFailureAnalyzerTests {
 		List<String> lines = readDescriptionLines(analysis);
 		assertThat(lines).hasSize(9);
 		assertThat(lines.get(0))
-				.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
-		assertThat(lines.get(1)).isEqualTo("");
+			.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
+		assertThat(lines.get(1)).isEmpty();
 		assertThat(lines.get(2)).isEqualTo("┌─────┐");
 		assertThat(lines.get(3)).startsWith("|  one defined in " + InnerInnerConfiguration.class.getName());
 		assertThat(lines.get(4)).isEqualTo("↑     ↓");
@@ -70,19 +73,19 @@ class BeanCurrentlyInCreationFailureAnalyzerTests {
 	void cycleWithAutowiredFields() throws IOException {
 		FailureAnalysis analysis = performAnalysis(CycleWithAutowiredFields.class);
 		assertThat(analysis.getDescription())
-				.startsWith("The dependencies of some of the beans in the application context form a cycle:");
+			.startsWith("The dependencies of some of the beans in the application context form a cycle:");
 		List<String> lines = readDescriptionLines(analysis);
 		assertThat(lines).hasSize(9);
 		assertThat(lines.get(0))
-				.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
-		assertThat(lines.get(1)).isEqualTo("");
+			.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
+		assertThat(lines.get(1)).isEmpty();
 		assertThat(lines.get(2)).isEqualTo("┌─────┐");
 		assertThat(lines.get(3)).startsWith("|  three defined in " + BeanThreeConfiguration.class.getName());
 		assertThat(lines.get(4)).isEqualTo("↑     ↓");
 		assertThat(lines.get(5)).startsWith("|  one defined in " + CycleWithAutowiredFields.class.getName());
 		assertThat(lines.get(6)).isEqualTo("↑     ↓");
-		assertThat(lines.get(7)).startsWith(
-				"|  " + BeanTwoConfiguration.class.getName() + " (field private " + BeanThree.class.getName());
+		assertThat(lines.get(7))
+			.startsWith("|  " + BeanTwoConfiguration.class.getName() + " (field private " + BeanThree.class.getName());
 		assertThat(lines.get(8)).isEqualTo("└─────┘");
 		assertThat(analysis.getAction()).isNotNull();
 	}
@@ -93,20 +96,20 @@ class BeanCurrentlyInCreationFailureAnalyzerTests {
 		List<String> lines = readDescriptionLines(analysis);
 		assertThat(lines).hasSize(12);
 		assertThat(lines.get(0))
-				.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
-		assertThat(lines.get(1)).isEqualTo("");
+			.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
+		assertThat(lines.get(1)).isEmpty();
 		assertThat(lines.get(2)).contains("refererOne (field " + RefererTwo.class.getName());
 		assertThat(lines.get(3)).isEqualTo("      ↓");
 		assertThat(lines.get(4)).contains("refererTwo (field " + BeanOne.class.getName());
 		assertThat(lines.get(5)).isEqualTo("┌─────┐");
 		assertThat(lines.get(6))
-				.startsWith("|  one defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
+			.startsWith("|  one defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
 		assertThat(lines.get(7)).isEqualTo("↑     ↓");
 		assertThat(lines.get(8))
-				.startsWith("|  two defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
+			.startsWith("|  two defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
 		assertThat(lines.get(9)).isEqualTo("↑     ↓");
 		assertThat(lines.get(10))
-				.startsWith("|  three defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
+			.startsWith("|  three defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
 		assertThat(lines.get(11)).isEqualTo("└─────┘");
 		assertThat(analysis.getAction()).isNotNull();
 	}
@@ -117,8 +120,8 @@ class BeanCurrentlyInCreationFailureAnalyzerTests {
 		List<String> lines = readDescriptionLines(analysis);
 		assertThat(lines).hasSize(5);
 		assertThat(lines.get(0))
-				.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
-		assertThat(lines.get(1)).isEqualTo("");
+			.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
+		assertThat(lines.get(1)).isEmpty();
 		assertThat(lines.get(2)).isEqualTo("┌──->──┐");
 		assertThat(lines.get(3)).startsWith("|  bean defined in " + SelfReferenceBeanConfiguration.class.getName());
 		assertThat(lines.get(4)).isEqualTo("└──<-──┘");
@@ -131,20 +134,20 @@ class BeanCurrentlyInCreationFailureAnalyzerTests {
 	}
 
 	@Test
-	void cycleWithCircularReferencesAllowed() throws IOException {
+	void cycleWithCircularReferencesAllowed() {
 		FailureAnalysis analysis = performAnalysis(CyclicBeanMethodsConfiguration.class, true);
 		assertThat(analysis.getAction()).contains("Despite circular references being allowed");
 	}
 
 	@Test
-	void cycleWithCircularReferencesProhibited() throws IOException {
+	void cycleWithCircularReferencesProhibited() {
 		FailureAnalysis analysis = performAnalysis(CyclicBeanMethodsConfiguration.class, false);
 		assertThat(analysis.getAction()).contains("As a last resort");
 	}
 
 	private List<String> readDescriptionLines(FailureAnalysis analysis) throws IOException {
 		try (BufferedReader reader = new BufferedReader(new StringReader(analysis.getDescription()))) {
-			return reader.lines().collect(Collectors.toList());
+			return reader.lines().toList();
 		}
 	}
 
@@ -159,13 +162,12 @@ class BeanCurrentlyInCreationFailureAnalyzerTests {
 	}
 
 	private Exception createFailure(Class<?> configuration, boolean allowCircularReferences) {
-		try (AnnotationConfigApplicationContext context = new AnnotationConfigApplicationContext()) {
-			context.register(configuration);
-			AbstractAutowireCapableBeanFactory beanFactory = (AbstractAutowireCapableBeanFactory) context
-					.getBeanFactory();
-			this.analyzer.setBeanFactory(beanFactory);
+		try {
+			this.context.register(configuration);
+			AbstractAutowireCapableBeanFactory beanFactory = (AbstractAutowireCapableBeanFactory) this.context
+				.getBeanFactory();
 			beanFactory.setAllowCircularReferences(allowCircularReferences);
-			context.refresh();
+			this.context.refresh();
 			fail("Expected failure did not occur");
 			return null;
 		}
