@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -32,7 +32,6 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -88,9 +87,9 @@ class DatabaseInitializationDependencyConfigurerTests {
 					context.registerBeanDefinition("alpha", alpha);
 					context.registerBeanDefinition("bravo", bravo);
 					given(MockDatabaseInitializerDetector.instance.detect(context.getBeanFactory()))
-							.willReturn(Collections.singleton("alpha"));
+						.willReturn(Collections.singleton("alpha"));
 					given(MockedDependsOnDatabaseInitializationDetector.instance.detect(context.getBeanFactory()))
-							.willReturn(Collections.singleton("bravo"));
+						.willReturn(Collections.singleton("bravo"));
 					context.refresh();
 					assertThat(DependsOnCaptor.dependsOn).hasEntrySatisfying("bravo",
 							(dependencies) -> assertThat(dependencies).containsExactly("alpha"));
@@ -108,7 +107,7 @@ class DatabaseInitializationDependencyConfigurerTests {
 					context.refresh();
 					assertThat(ConstructorInjectionDatabaseInitializerDetector.environment).isEqualTo(this.environment);
 					assertThat(ConstructorInjectionDependsOnDatabaseInitializationDetector.environment)
-							.isEqualTo(this.environment);
+						.isEqualTo(this.environment);
 				});
 	}
 
@@ -121,16 +120,16 @@ class DatabaseInitializationDependencyConfigurerTests {
 					context.registerBeanDefinition("alpha", alpha);
 					context.registerBeanDefinition("bravo", bravo);
 					given(MockDatabaseInitializerDetector.instance.detect(context.getBeanFactory()))
-							.willReturn(Collections.singleton("alpha"));
+						.willReturn(Collections.singleton("alpha"));
 					given(MockedDependsOnDatabaseInitializationDetector.instance.detect(context.getBeanFactory()))
-							.willReturn(Collections.singleton("bravo"));
+						.willReturn(Collections.singleton("bravo"));
 					context.register(DependencyConfigurerConfiguration.class);
 					context.refresh();
 					assertThat(alpha.getAttribute(DatabaseInitializerDetector.class.getName()))
-							.isEqualTo(MockDatabaseInitializerDetector.class.getName());
+						.isEqualTo(MockDatabaseInitializerDetector.class.getName());
 					assertThat(bravo.getAttribute(DatabaseInitializerDetector.class.getName())).isNull();
-					then(MockDatabaseInitializerDetector.instance).should().detectionComplete(context.getBeanFactory(),
-							Collections.singleton("alpha"));
+					then(MockDatabaseInitializerDetector.instance).should()
+						.detectionComplete(context.getBeanFactory(), Collections.singleton("alpha"));
 					assertThat(bravo.getDependsOn()).containsExactly("alpha");
 				});
 	}
@@ -148,13 +147,13 @@ class DatabaseInitializationDependencyConfigurerTests {
 						MockedDependsOnDatabaseInitializationDetector.class),
 				(context) -> {
 					given(MockDatabaseInitializerDetector.instance.detect(context.getBeanFactory()))
-							.willReturn(Collections.singleton("alpha"));
+						.willReturn(Collections.singleton("alpha"));
 					given(OrderedNearLowestMockDatabaseInitializerDetector.instance.detect(context.getBeanFactory()))
-							.willReturn(new LinkedHashSet<>(Arrays.asList("bravo1", "bravo2")));
+						.willReturn(new LinkedHashSet<>(Arrays.asList("bravo1", "bravo2")));
 					given(OrderedLowestMockDatabaseInitializerDetector.instance.detect(context.getBeanFactory()))
-							.willReturn(new LinkedHashSet<>(Arrays.asList("charlie")));
+						.willReturn(new LinkedHashSet<>(Arrays.asList("charlie")));
 					given(MockedDependsOnDatabaseInitializationDetector.instance.detect(context.getBeanFactory()))
-							.willReturn(Collections.singleton("delta"));
+						.willReturn(Collections.singleton("delta"));
 					context.registerBeanDefinition("alpha", alpha);
 					context.registerBeanDefinition("bravo1", bravo1);
 					context.registerBeanDefinition("bravo2", bravo2);
@@ -168,6 +167,35 @@ class DatabaseInitializationDependencyConfigurerTests {
 					assertThat(bravo2.getDependsOn()).containsExactly("alpha");
 					assertThat(alpha.getDependsOn()).isNullOrEmpty();
 				});
+	}
+
+	@Test
+	void whenInAnAotProcessedContextDependsOnDatabaseInitializationPostProcessorDoesNothing() {
+		withAotEnabled(() -> {
+			BeanDefinition alpha = BeanDefinitionBuilder.rootBeanDefinition(String.class).getBeanDefinition();
+			BeanDefinition bravo = BeanDefinitionBuilder.rootBeanDefinition(String.class).getBeanDefinition();
+			performDetection(Arrays.asList(MockDatabaseInitializerDetector.class,
+					MockedDependsOnDatabaseInitializationDetector.class), (context) -> {
+						context.registerBeanDefinition("alpha", alpha);
+						context.registerBeanDefinition("bravo", bravo);
+						context.register(DependencyConfigurerConfiguration.class);
+						context.refresh();
+						assertThat(alpha.getAttribute(DatabaseInitializerDetector.class.getName())).isNull();
+						assertThat(bravo.getAttribute(DatabaseInitializerDetector.class.getName())).isNull();
+						then(MockDatabaseInitializerDetector.instance).shouldHaveNoInteractions();
+						assertThat(bravo.getDependsOn()).isNull();
+					});
+		});
+	}
+
+	private void withAotEnabled(Runnable action) {
+		System.setProperty("spring.aot.enabled", "true");
+		try {
+			action.run();
+		}
+		finally {
+			System.clearProperty("spring.aot.enabled");
+		}
 	}
 
 	private void performDetection(Collection<Class<?>> detectors,
@@ -220,7 +248,7 @@ class DatabaseInitializationDependencyConfigurerTests {
 
 	static class MockDatabaseInitializerDetector implements DatabaseInitializerDetector {
 
-		private static DatabaseInitializerDetector instance = mock(DatabaseInitializerDetector.class);
+		private static final DatabaseInitializerDetector instance = mock(DatabaseInitializerDetector.class);
 
 		@Override
 		public Set<String> detect(ConfigurableListableBeanFactory beanFactory) {
@@ -237,7 +265,7 @@ class DatabaseInitializationDependencyConfigurerTests {
 
 	static class OrderedLowestMockDatabaseInitializerDetector implements DatabaseInitializerDetector {
 
-		private static DatabaseInitializerDetector instance = mock(DatabaseInitializerDetector.class);
+		private static final DatabaseInitializerDetector instance = mock(DatabaseInitializerDetector.class);
 
 		@Override
 		public Set<String> detect(ConfigurableListableBeanFactory beanFactory) {
@@ -253,7 +281,7 @@ class DatabaseInitializationDependencyConfigurerTests {
 
 	static class OrderedNearLowestMockDatabaseInitializerDetector implements DatabaseInitializerDetector {
 
-		private static DatabaseInitializerDetector instance = mock(DatabaseInitializerDetector.class);
+		private static final DatabaseInitializerDetector instance = mock(DatabaseInitializerDetector.class);
 
 		@Override
 		public Set<String> detect(ConfigurableListableBeanFactory beanFactory) {
@@ -269,7 +297,7 @@ class DatabaseInitializationDependencyConfigurerTests {
 
 	static class MockedDependsOnDatabaseInitializationDetector implements DependsOnDatabaseInitializationDetector {
 
-		private static DependsOnDatabaseInitializationDetector instance = mock(
+		private static final DependsOnDatabaseInitializationDetector instance = mock(
 				DependsOnDatabaseInitializationDetector.class);
 
 		@Override
@@ -298,7 +326,7 @@ class DatabaseInitializationDependencyConfigurerTests {
 			}
 			else if (DependsOnDatabaseInitializationDetector.class.isAssignableFrom(detector)) {
 				this.dependsOnDatabaseInitializationDetectors
-						.add((Class<DependsOnDatabaseInitializationDetector>) detector);
+					.add((Class<DependsOnDatabaseInitializationDetector>) detector);
 			}
 			else {
 				throw new IllegalArgumentException("Unsupported detector type '" + detector.getName() + "'");
@@ -311,11 +339,10 @@ class DatabaseInitializationDependencyConfigurerTests {
 				return super.findResources(name);
 			}
 			Properties properties = new Properties();
-			properties.put(DatabaseInitializerDetector.class.getName(), String.join(",",
-					this.databaseInitializerDetectors.stream().map(Class::getName).collect(Collectors.toList())));
-			properties.put(DependsOnDatabaseInitializationDetector.class.getName(),
-					String.join(",", this.dependsOnDatabaseInitializationDetectors.stream().map(Class::getName)
-							.collect(Collectors.toList())));
+			properties.put(DatabaseInitializerDetector.class.getName(),
+					String.join(",", this.databaseInitializerDetectors.stream().map(Class::getName).toList()));
+			properties.put(DependsOnDatabaseInitializationDetector.class.getName(), String.join(",",
+					this.dependsOnDatabaseInitializationDetectors.stream().map(Class::getName).toList()));
 			File springFactories = new File(this.temp, "spring.factories");
 			try (FileWriter writer = new FileWriter(springFactories)) {
 				properties.store(writer, "");
