@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.io.StringReader;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.TestTemplate;
 import org.junit.jupiter.api.condition.DisabledOnOs;
@@ -75,7 +74,7 @@ class EmbeddedServletContainerWarPackagingIntegrationTests {
 	@TestTemplate
 	void applicationClassesAreNotAvailableViaHttp(RestTemplate rest) {
 		ResponseEntity<String> entity = rest
-				.getForEntity("/WEB-INF/classes/com/example/ResourceHandlingApplication.class", String.class);
+			.getForEntity("/WEB-INF/classes/com/example/ResourceHandlingApplication.class", String.class);
 		assertThat(entity.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 	}
 
@@ -99,14 +98,14 @@ class EmbeddedServletContainerWarPackagingIntegrationTests {
 		ResponseEntity<String> entity = rest.getForEntity("/resourcePaths", String.class);
 		assertThat(entity.getStatusCode()).isEqualTo(HttpStatus.OK);
 		assertThat(readLines(entity.getBody()))
-				.noneMatch((resourcePath) -> resourcePath.startsWith("/org/springframework/boot/loader"));
+			.noneMatch((resourcePath) -> resourcePath.startsWith("/org/springframework/boot/loader"));
 	}
 
 	@TestTemplate
 	void conditionalOnWarDeploymentBeanIsNotAvailableForEmbeddedServer(RestTemplate rest) {
 		assertThat(rest.getForEntity("/always", String.class).getStatusCode()).isEqualTo(HttpStatus.OK);
 		assertThat(rest.getForEntity("/conditionalOnWar", String.class).getStatusCode())
-				.isEqualTo(HttpStatus.NOT_FOUND);
+			.isEqualTo(HttpStatus.NOT_FOUND);
 	}
 
 	private List<String> readLines(String input) {
@@ -114,7 +113,7 @@ class EmbeddedServletContainerWarPackagingIntegrationTests {
 			return Collections.emptyList();
 		}
 		try (BufferedReader reader = new BufferedReader(new StringReader(input))) {
-			return reader.lines().collect(Collectors.toList());
+			return reader.lines().toList();
 		}
 		catch (IOException ex) {
 			throw new RuntimeException("Failed to read lines from input '" + input + "'");
